# Parti-VOD-Downloader

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: Icon.icns  windows.rc
src/: main.rs
