[package]
name = "parti_vod_downloader"
version = "0.0.4"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
rfd = "0.14"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
chrono = "0.4"
which = "6"
zip = "0.6"
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
image = "0.24"


[build-dependencies]
embed-resource = "2"

[package.metadata.bundle]
name = "Parti VOD Downloader"
identifier = "io.github.zzyil.Parti-VOD-Downloader"
icon = ["assets/Icon.icns", "assets/Icon.ico", "assets/Icon.png"]
version = "0.0.4"
short_description = "Download and convert Parti.com VODs/videos"
long_description = """
A modern GUI app designed to download and convert Parti.com VODs/videos into various formats, such as mp4, mp3, webm & more. Requires ffmpeg to work.
"""